--- a/css/typography.css
+++ b/css/typography.css
@@ -13,10 +13,13 @@ img {
 	width: 100%;
 }
 
+.error-textbox {
+	position: relative; 
+}
+
 .error {
 	text-align: center;
 	font-weight: 300;
-	position: relative; 
 	bottom: 10 rem;
 }
 
