--- a/_includes/css/ancestor.css
+++ b/_includes/css/ancestor.css
@@ -2,6 +2,7 @@
 
 html {
 	font-family: "Roboto", "Helvetica", "Arial", Sans-serif;
+	font-weight: 100;
 	-moz-text-size-adjust: 100%;
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
@@ -32,4 +33,4 @@ img {
 .error-logo {
 	width: 20%;
 	margin: auto;
-}
+} 
