--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,31 @@
-<nav>
-	<ul class="nav">
-		<li><a href="#work">Work</a></li>
-		<li><a href="#about">About</a></li>
-		<li><a href="#contact">Contact</a></li>
+<nav class="nav nav-bar-center unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8">
+	<ul class="planet">
+		<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
+	<!--		<img src="http://placehold.it/200x200" alt="work"> -->
+			<a href="#work">
+				<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
+					Gabriel Mitchell Fox Logo
+				</object>	
+				Work
+			</a>
+		</li>
+		<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
+	<!--		<img src="http://placehold.it/200x200" alt="work"> -->
+			<a href="#about">
+				<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
+					Gabriel Mitchell Fox Logo
+				</object>	
+				About
+			</a>
+		</li>
+		<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
+	<!--		<img src="http://placehold.it/200x200" alt="work"> -->
+			<a href="#contact">
+				<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
+					Gabriel Mitchell Fox Logo
+				</object>	
+				Contact
+			</a>
+		</li>
 	</ul>
 </nav>
