--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,25 +1,22 @@
 <nav class="nav nav-bar-center unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8">
 	<ul class="planet">
 		<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
-	<!--		<img src="http://placehold.it/200x200" alt="work"> -->
 			<a href="#work">
-				<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
+				<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn" onClick="">
 					Gabriel Mitchell Fox Logo
 				</object>	
 				Work
 			</a>
 		</li>
 		<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
-	<!--		<img src="http://placehold.it/200x200" alt="work"> -->
 			<a href="#about">
 				<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
 					Gabriel Mitchell Fox Logo
-				</object>	
+				</object>
 				About
 			</a>
 		</li>
 		<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
-	<!--		<img src="http://placehold.it/200x200" alt="work"> -->
 			<a href="#contact">
 				<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
 					Gabriel Mitchell Fox Logo
