--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,16 +18,16 @@
 
 	<header>
 		<div>
-			<img src="http://placehold.it/2000x700">
+			<img src="http://placehold.it/2000x600">
 		</div>
 		<h1 class="center-text">Gabriel Mitchell</h1>
 		{% include nav.html %}
 	</header>
 	
 	{{content}}
-	
+	<hr/>
 	<footer>
-	<!--	{% include nav.html %} -->
+		{% include nav.html %} 
 	</footer>
 
 </body>
