--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -36,7 +36,7 @@ LIGHTSLATEGRAY
 .nav-bar-center {
 	display: block;
 	margin: 0 auto;
-	overflow:hidden;
+	overflow:visible;
 }
 
 .nav ul {
@@ -47,16 +47,31 @@ LIGHTSLATEGRAY
 .nav li {
 	text-decoration: none;
 	display: inline-block;
-	background-color: rgba(119,136,153,.85);
 	text-align: center;
-}
-
-.nav a {
 	color: #FDF5E6; 
+	padding: 1.5rem 0;
+	transition: .5s;
+	-webkit-transition: .5s;
+	-moz-transition: .5s;
+	-ms-transition: .5s;
+	-o-transition: .5s;
 }
 
 .menu-btn {
 	display:block;
 	margin: 0 auto;
 	width: 15%;
+}
+
+.nav li:hover,
+.nav li:focus,
+.nav li:active {
+		background-color: rgba(119,136,153,.85);
+}
+
+.nav li:hover a,
+.nav li:focus a,
+.nav li:active a {
+	color: #F5F5F5;
+	font-weight: 400;
 }
