Centered social media icons
+ minor code semantics
+ changed colour shift in logo

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,37 +1,37 @@
-<!-- CONTACT -->
-
 <h2 class="center-text">Let's Create Some Cool Stuff Together!</h2>
 <h6 class="cell center-text top-none">Get in touch or send me secret messages in Morse code</h6>
 
-<div class="contact wrap center-object unit unit-s-1">
-	<ul class="planet">
-		<li class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
-			<a href="#">
-				<img src="http://placehold.it/100x100" alt="Link to Works on Behance">
-				Behance
-			</a>
-			<p class="atom">See more works</p>
-		</li>
-		<li class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
-			<a href="#">
-				<img src="http://placehold.it/100x100" alt="Link to Photos on Instagram">
-				Instagram
-			</a>
-			<p class="atom">Works in progress and weird life happenings</p>
-		</li>
-		<li class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
-			<a href="#">
-				<img src="http://placehold.it/100x100" alt="Link to weird conversations on Twitter">
-				Twitter
-			</a>
-			<p class="atom">3AM conversations</p>
-		</li>
-		<li class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
-			<a href="#">
-				<img src="http://placehold.it/100x100" alt="Link to awesome things on Tumblr">
-				Tumblr
-			</a>
-			<p class="atom">Inspiration, Wanderlust, Design, and Photography</p>
-		</li>
-	</ul>
+<div class="contact nav-bar-center unit-s-1 unit-m-1 unit-l-4-8 unit-xl-4-8"> <!-- why does this work. why does div not wrap. why. *anger emoji* -->
+	<div class="wrap">
+		<ul class="grid cell w400">
+			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
+				<a href="#">
+					<img src="http://placehold.it/100x100" alt="Link to Works on Behance">
+					Behance
+				</a>
+				<p class="atom">See more works</p>
+			</li>
+			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
+				<a href="#">
+					<img src="http://placehold.it/100x100" alt="Link to awesome things on Tumblr">
+					Tumblr
+				</a>
+				<p class="atom">Inspiration, Wanderlust, Design, and Photography</p>
+			</li>
+			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
+				<a href="#">
+					<img src="http://placehold.it/100x100" alt="Link to weird conversations on Twitter">
+					Twitter
+				</a>
+				<p class="atom">3AM conversations</p>
+			</li>
+			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
+				<a href="#">
+					<img src="http://placehold.it/100x100" alt="Link to Photos on Instagram">
+					Instagram
+				</a>
+				<p class="atom">Works in progress and weird life happenings</p>
+			</li>
+		</ul>
+	</div>	
 </div>
