--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
 	<ul class="planet">
 		<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
 			<a href="#work">
-				<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn" onClick="">
+				<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
 					Gabriel Mitchell Fox Logo
 				</object>	
 				Work
