--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 ---
 ---
 
+{% include css/grid.css %}
 {% include css/ancestor.css %}
 {% include css/typography.css %}
-{% include css/grid.css %}
 {% include css/nav.css %}
-
+{% include css/show-hide.css %}
