--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="nav nav-bar-center unit-s-1 unit-m-1 unit-l-6-8 unit-xl-6-8">
+<nav class="nav nav-bar-center">
 	<ul class="planet">
 		<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
 			<a href="#work">
