--- a/_includes/pieces.html
+++ b/_includes/pieces.html
@@ -1,32 +1,42 @@
-<div class="wrap object-center">
-	<div class="center-text">
+<div class="wrap object-center clearfix piece">
+	<div class="center-text wrap buffer">
 		<h3 class="bottom-none">Extraordinarily Long Title for Portfolio Piece</h3>
 		<h5 class="top-none cell caption w100">This is a brief description</h5>
 	</div>
-	<div>
-		<div class="unit unit-s-1 unit-m-4-8 unit-l-5-8 unit-xl-5-8">
-			<img src="http://placehold.it/600x400" alt="">
+	<div class="wrap">
+		<div class="unit unit-s-1 unit-m-1 unit-l-4-8 unit-xl-5-8">
+			<img src="http://placehold.it/600x400/778899/F5F5F5" alt="">
 		</div>
-		<div class="unit unit-s-4-8 unit-m-2-8 unit-l-1-8 unit-xl-1-8">
-			<img src="http://placehold.it/600x400" alt="">
-		</div>
-		<div class="unit unit-s-4-8 unit-m-2-8 unit-l-1-8 unit-xl-1-8">
-			<img src="http://placehold.it/600x400" alt="">
-		</div>
-		<div class="unit unit-s-4-8 unit-m-2-8 unit-l-1-8 unit-xl-1-8">
-			<img src="http://placehold.it/600x400" alt="">
-		</div>
-		<div class="unit unit-s-4-8 unit-m-2-8 unit-l-1-8 unit-xl-1-8">
-			<img src="http://placehold.it/600x400" alt="">
-		</div>
-		<div class="unit unit-s-4-8 unit-m-2-8 unit-l-1-8 unit-xl-1-8">
-			<img src="http://placehold.it/600x400" alt="">
-		</div>
-		<div class="unit unit-s-4-8 unit-m-2-8 unit-l-1-8 unit-xl-1-8">
-			<img src="http://placehold.it/600x400" alt="">
-		</div>
-		<div class="unit unit-s-1 unit-m-4-8 unit-l-3-8 unit-xl-3-8">
-
+		
+		<div class="unit unit-s-1 unit-m-1 unit-l-4-8 unit-xl-3-8">
+			<div class="accordion">
+				<ul>
+					<li>
+						<h3 class="center-text planet w100">About this Project</h3>
+						<p class="cell w400">with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
+					</li>
+				</ul>
+			</div>
 		</div>		
+
+		
+		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
+			<img src="http://placehold.it/600x400/FFA500/778899" alt="">
+		</div>
+		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
+			<img src="http://placehold.it/600x400/FFFFFF/FFA500" alt="">
+		</div>
+		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
+			<img src="http://placehold.it/600x400/778899/FFFFFF" alt="">
+		</div>
+		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
+			<img src="http://placehold.it/600x400/FFFFFF/FFA500" alt="">
+		</div>
+		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
+			<img src="http://placehold.it/600x400/E14825/778899" alt="">
+		</div>
+		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
+			<img src="http://placehold.it/600x400/FFA500/FFFFFF" alt="">
+		</div>
 	</div>
 </div>
