--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Gabriel Mitchell Portoflio · {{page.title}}</title>
 <link href="{{site.baseurl}}css/main.css" rel="stylesheet">
-<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,500,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
 <meta name="handheldfriendly" content="true">
 <meta name="mobileoptimized" content="240">
 <meta name="viewport" content="width=device-width,initial-scale=1" >
@@ -18,7 +18,7 @@
 
 	<header>
 		<div>
-			<img src="http://placehold.it/2000x600">
+			<img src="http://placehold.it/2000x600/778899/F5F5F5" alt="Welcome to my Portfolio">
 		</div>
 		<h1 class="center-text">Gabriel Mitchell</h1>
 		{% include nav.html %}
@@ -29,6 +29,7 @@
 	<footer>
 		{% include nav.html %} 
 	</footer>
-
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script src="js/accordion.js"></script>
 </body>
 </html>
