--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -33,6 +33,11 @@ LIGHTSLATEGRAY
 	
 */
 
+.nav {
+	overflow:hidden;
+	width: 100%;
+}
+
 .nav-bar-center {
 	display: block;
 	margin: 0 auto;
@@ -61,11 +66,11 @@ LIGHTSLATEGRAY
 	text-align: center;
 	color: #FDF5E6; 
 	padding: 1.5rem 0;
-	transition: .5s;
 	-webkit-transition: .5s;
 	-moz-transition: .5s;
 	-ms-transition: .5s;
 	-o-transition: .5s;
+	transition: .5s;
 }
 
 .menu-btn {
