--- a/_includes/pieces.html
+++ b/_includes/pieces.html
@@ -4,9 +4,56 @@
 		<h5 class="top-none cell caption w100">This is a brief description</h5>
 	</div>
 	<div class="wrap">
-		<div class="unit unit-s-1 unit-m-1 unit-l-4-8 unit-xl-5-8">
+		<!-- <div class="unit unit-s-1 unit-m-1 unit-l-4-8 unit-xl-5-8">
 			<img src="http://placehold.it/600x400/778899/F5F5F5" alt="">
-		</div>
+		</div> -->
+		<div class="flexslider unit unit-s-1 unit-m-1 unit-l-4-8 unit-xl-5-8">
+		  <ul class="slides unit-r unit-s-1 unit-m-1 unit-l-1 unit-xl-1">
+			<li data-thumb="http://placehold.it/600x400/E14825/778899">
+				<div>
+					<img src="http://placehold.it/600x400/E14825/778899" alt="">
+				</div>
+			</li>
+			<li data-thumb="http://placehold.it/600x400/778899/FFA500">
+				<div>
+					<img src="http://placehold.it/600x400/778899/FFA500" alt="">
+				</div>
+			</li>
+			<li data-thumb="http://placehold.it/600x400/778899/E14825">
+				<div>
+					<img src="http://placehold.it/600x400/778899/E14825" alt="">
+				</div>
+			</li>
+			<li data-thumb="http://placehold.it/600x400/FFA500/FFFFFF">
+				<div>
+					<img src="http://placehold.it/600x400/FFA500/FFFFFF" alt="">
+				</div>
+			</li>
+			<li data-thumb="http://placehold.it/600x400/FFA500/FFFFFF">
+				<div>
+					<img src="http://placehold.it/600x400/FFA500/FFFFFF" alt="">
+				</div>
+			</li>
+			<li data-thumb="http://placehold.it/600x400/FFA500/FFFFFF">
+				<div>
+					<img src="http://placehold.it/600x400/FFA500/FFFFFF" alt="">
+				</div>
+			</li>
+		  	<li>
+				<div class="unit unit-s-1 unit-m-1 unit-l-1 unit-xl-1"> <!-- test... uhh well. -->
+					<div class="accordion">
+						<ul>
+							<li>
+								<h3 class="center-text planet w100">About this Project</h3>
+								<p class="cell w400">with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
+							</li>
+						</ul>
+					</div>
+				</div>		
+			</li>
+		  </ul>
+		</div>	
+
 		
 		<div class="unit unit-s-1 unit-m-1 unit-l-4-8 unit-xl-3-8">
 			<div class="accordion">
@@ -38,5 +85,5 @@
 		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
 			<img src="http://placehold.it/600x400/FFA500/FFFFFF" alt="">
 		</div>
-	</div>
+	</div>	
 </div>
