--- a/_includes/css/typography.css
+++ b/_includes/css/typography.css
@@ -130,6 +130,15 @@ hr {
 	color: #FFF;
 }
 
+:focus {
+	outline: 3px solid #FFA500;
+	background-color:  rgba(255,165,0,.2);
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	-webkit-box-sizing:border-box;
+	font-weight: 400;
+}
+
 a,
 a:link {
 	color: #E14825;
@@ -151,10 +160,10 @@ a:hover,
 a:active {
 	outline:none;
 }
-
+/*
 a:focus {
 	outline: #CD5C5C 3px solid;
-}
+}*/
 
 .copyright {
 	color: rgba(0,0,0,.50);
