--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,28 +1,30 @@
-<nav class="wrap nav nav-bar-center">
-	<ul class="planet">
-		<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
-			<a href="#work">
-				<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
-					Gabriel Mitchell Fox Logo
-				</object>	
-				Work
-			</a>
-		</li>
-		<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
-			<a href="#about">
-				<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
-					Gabriel Mitchell Fox Logo
-				</object>
-				About
-			</a>
-		</li>
-		<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
-			<a href="#contact">
-				<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
-					Gabriel Mitchell Fox Logo
-				</object>	
-				Contact
-			</a>
-		</li>
-	</ul>
-</nav>
+<div class="wrap buffer">
+	<nav class="nav nav-bar-center">
+		<ul class="planet">
+			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
+				<a href="#work">
+					<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
+						Gabriel Mitchell Fox Logo
+					</object>	
+					Work
+				</a>
+			</li>
+			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
+				<a href="#about">
+					<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
+						Gabriel Mitchell Fox Logo
+					</object>
+					About
+				</a>
+			</li>
+			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
+				<a href="#contact">
+					<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
+						Gabriel Mitchell Fox Logo
+					</object>	
+					Contact
+				</a>
+			</li>
+		</ul>
+	</nav>
+</div>
