--- a/_includes/pieces.html
+++ b/_includes/pieces.html
@@ -1,5 +1,5 @@
 <div class="wrap object-center clearfix piece">
-	<div class="center-text wrap buffer">
+	<div class="center-text wrap">
 		<h3 class="bottom-none">Extraordinarily Long Title for Portfolio Piece</h3>
 		<h5 class="top-none cell caption w100">This is a brief description</h5>
 	</div>
