Validated HTML & CSS
charset error on CSS??

--- a/_includes/css/typography.css
+++ b/_includes/css/typography.css
@@ -115,6 +115,10 @@ small, .atom, caption {
 	font-weight: 100;
 }
 
+.salmon {
+	color: #FA8072;
+}
+
 /* ========================================== Basic Tag Definitions  ========================================== */
 
 p {
