--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,3 +1,3 @@
 <div class="center-object unit-s-1 unit-m-6-8 unit-l-6-8 unit-xl-4-8">
-	<p class="cell">Gabriel Mitcell is an Ottawa-based Graphic Designer and Illustrator. His interests include: photography, travelling, space exploration, and setting rude clients on fire.</p>
+	<p class="planet w300 salmon">Gabriel Mitcell is an Ottawa-based Graphic Designer and Illustrator. His interests include: photography, travelling, space exploration, and setting rude clients on fire.</p>
 </div>
