--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script> -->
 <script src="js/jquery.flexslider.js"></script>
-<script type="text/javascript" charset="utf-8">
+<script type="text/javascript">
 $(window).load(function() {
 	$('.flexslider').flexslider({
 		animation: "fade",
@@ -26,14 +26,6 @@ $(window).load(function() {
 </script>
 </head>
 <body>
-
-	<header>
-		<div>
-			<img src="http://placehold.it/2000x600/778899/F5F5F5" alt="Welcome to my Portfolio">
-		</div>
-		<h1 class="center-text">Gabriel Mitchell</h1>
-		{% include nav.html %}
-	</header>
 	
 	{{content}}
 	<hr/>
