--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,28 +5,28 @@
 	<div class="wrap">
 		<ul class="grid cell w400">
 			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
-				<a href="#">
+				<a href="https://www.behance.net/gabrielmitchell">
 					<img src="http://placehold.it/100x100" alt="Link to Works on Behance">
 					Behance
 				</a>
 				<p class="atom">See more works</p>
 			</li>
 			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
-				<a href="#">
+				<a href="http://design-and-disdain.tumblr.com/">
 					<img src="http://placehold.it/100x100" alt="Link to awesome things on Tumblr">
 					Tumblr
 				</a>
 				<p class="atom">Inspiration, Wanderlust, Design, and Photography</p>
 			</li>
 			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
-				<a href="#">
+				<a href="https://twitter.com/thericeshogun">
 					<img src="http://placehold.it/100x100" alt="Link to weird conversations on Twitter">
 					Twitter
 				</a>
 				<p class="atom">3AM conversations</p>
 			</li>
 			<li class="unit unit-s-4-8 unit-m-2-8 unit-l-2-8 unit-xl-2-8">
-				<a href="#">
+				<a href="http://instagram.com/thericeshogun">
 					<img src="http://placehold.it/100x100" alt="Link to Photos on Instagram">
 					Instagram
 				</a>
