--- a/_includes/pieces.html
+++ b/_includes/pieces.html
@@ -7,7 +7,19 @@
 		<!-- <div class="unit unit-s-1 unit-m-1 unit-l-4-8 unit-xl-5-8">
 			<img src="http://placehold.it/600x400/778899/F5F5F5" alt="">
 		</div> -->
-		<div class="flexslider unit unit-s-1 unit-m-1 unit-l-4-8 unit-xl-5-8">
+		<div class="flexslider unit unit-s-1 unit-m-1 unit-l-1 unit-xl-1"> <!-- FLEXSLIDER MODULE -->
+		
+			<div class="about wrap unit-r unit-s-1 unit-m-1 unit-l-4-8 unit-xl-4-8 unit-xxl-2-8">
+				<div class="accordion">
+					<ul>
+						<li>
+							<h3 class="center-text planet w100">About this Project</h3>
+							<p class="cell w400">with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
+						</li>
+					</ul>
+				</div>
+			</div>		<!-- end div for About this Project module -->
+
 		  <ul class="slides unit-r unit-s-1 unit-m-1 unit-l-1 unit-xl-1">
 			<li data-thumb="http://placehold.it/600x400/E14825/778899">
 				<div>
@@ -39,34 +51,24 @@
 					<img src="http://placehold.it/600x400/FFA500/FFFFFF" alt="">
 				</div>
 			</li>
-		  	<li>
-				<div class="unit unit-s-1 unit-m-1 unit-l-1 unit-xl-1"> <!-- test... uhh well. -->
-					<div class="accordion">
-						<ul>
-							<li>
-								<h3 class="center-text planet w100">About this Project</h3>
-								<p class="cell w400">with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
-							</li>
-						</ul>
-					</div>
-				</div>		
+			</li>
+			<li data-thumb="http://placehold.it/600x400/778899/FFA500">
+				<div>
+					<img src="http://placehold.it/600x400/778899/FFA500" alt="">
+				</div>
+			</li>
+			<li data-thumb="http://placehold.it/600x400/778899/E14825">
+				<div>
+					<img src="http://placehold.it/600x400/778899/E14825" alt="">
+				</div>
 			</li>
 		  </ul>
-		</div>	
+		</div>
+	
+	</div>	<!-- end div for wrap around piece -->
+</div> <!-- end div for piece -->
+<!--
 
-		
-		<div class="unit unit-s-1 unit-m-1 unit-l-4-8 unit-xl-3-8">
-			<div class="accordion">
-				<ul>
-					<li>
-						<h3 class="center-text planet w100">About this Project</h3>
-						<p class="cell w400">with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</p>
-					</li>
-				</ul>
-			</div>
-		</div>		
-
-		
 		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
 			<img src="http://placehold.it/600x400/FFA500/778899" alt="">
 		</div>
@@ -85,5 +87,4 @@
 		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
 			<img src="http://placehold.it/600x400/FFA500/FFFFFF" alt="">
 		</div>
-	</div>	
-</div>
+		-->
