--- a/_includes/css/ancestor.css
+++ b/_includes/css/ancestor.css
@@ -35,6 +35,16 @@ object {
 .clearfix {
 	clear: left;
 }
+/* Nope that didn't work.
+.about {
+	position:fixed !important;
+	position:absolute;
+	top:0;
+	right:0;
+	bottom:0;
+	left:0;
+} */
+
 
 /*
 .welcome {
