--- a/_includes/css/flexslider.css
+++ b/_includes/css/flexslider.css
@@ -53,7 +53,7 @@ html[xmlns] .slides {display: block;}
 
 /* FlexSlider Default Theme
 *********************************/
-.flexslider { margin: 0; background: #fff; border: none; position: relative; zoom: 1; }
+.flexslider { margin: 0; border: none; position: relative; zoom: 1; }
 .flex-viewport { max-height: 2000px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; -o-transition: all 1s ease; transition: all 1s ease; }
 .loading .flex-viewport { max-height: 300px; }
 .flexslider .slides { zoom: 1; }
@@ -61,15 +61,15 @@ html[xmlns] .slides {display: block;}
 
 /* Direction Nav */
 .flex-direction-nav {*height: 0;}
-.flex-direction-nav a  { text-decoration:none; display: block; width: auto; height: 40px; margin: -20px 0 0; position: absolute; top: 25%; z-index: 10; overflow: hidden; opacity: 0; cursor: pointer; color: rgba(0,0,0,0.8); text-shadow: 1px 1px 0px rgba(255,255,255,0.85); -webkit-transition: all .3s ease; -moz-transition: all .3s ease; transition: all .3s ease; }
+.flex-direction-nav a  { text-decoration:none; display: block; width: auto; height: 40px; margin: -20px 0 0; position: absolute; top: 50px; z-index: 100; overflow: hidden; opacity: 0; cursor: pointer; color: rgba(0,0,0,0.8); text-shadow: 1px 1px 0px rgba(255,255,255,0.85); -webkit-transition: all .3s ease; -moz-transition: all .3s ease; transition: all .3s ease; }
 .flex-direction-nav .flex-prev { left: -50px; }
 .flex-direction-nav .flex-next { right: -50px; text-align: right; }
 .flexslider:hover .flex-prev { opacity: 0.7; left: 15px; }
 .flexslider:hover .flex-next { opacity: 0.7; right: 15px; }
 .flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover { opacity: 1; }
 .flex-direction-nav .flex-disabled { opacity: 0!important; filter:alpha(opacity=0); cursor: default; }
-.flex-direction-nav a:before  { font-family: "flexslider-icon"; font-size: 40px; line-height:1; display: inline-block; content: '·'; position: absolute; }
-.flex-direction-nav a.flex-next:before  { content: '·'; top: 10px; position: absolute;  }
+.flex-direction-nav a:before  { font-family: "flexslider-icon"; font-size: 40px; line-height:1; display: inline-block; content: ''; position: absolute; z-index: 100; }
+.flex-direction-nav a.flex-next:before  { content: ''; top: 10px; position: absolute; z-index: 100; }
 
 /* Pause/Play */
 .flex-pauseplay a { display: block; width: 20px; height: 20px; position: absolute; bottom: 5px; left: 10px; opacity: 0.8; z-index: 10; overflow: hidden; cursor: pointer; color: #000; }
@@ -83,16 +83,108 @@ html[xmlns] .slides {display: block;}
     left: 0;
     top: 0;
 	z-index: 100;}
-.flex-control-nav li {margin: 0 6px; display: inline-block; zoom: 1; *display: inline; }
+.flex-control-nav li {margin: 0 0px; display: inline-block; zoom: 1; *display: inline; }
 .flex-control-paging li a {width: 11px; height: 11px; display: block; background: #666; background: rgba(0,0,0,0.5); cursor: pointer; text-indent: -9999px; -webkit-border-radius: 20px; -moz-border-radius: 20px; -o-border-radius: 20px; border-radius: 20px; -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); -moz-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); -o-box-shadow: inset 0 0 3px rgba(0,0,0,0.3); box-shadow: inset 0 0 3px rgba(0,0,0,0.3); }
 .flex-control-paging li a:hover { background: #333; background: rgba(0,0,0,0.7); }
 .flex-control-paging li a.flex-active { background: #000; background: rgba(0,0,0,0.9); cursor: default; }
 
-.flex-control-thumbs {margin: 5px 0 0; position: static; overflow: hidden;}
-.flex-control-thumbs li {width: 25%; float: left; margin: 0;}
+.flex-control-thumbs {margin: 0; position: relative; overflow: hidden;}
+.flex-control-thumbs li {width: 25%; float: right; margin: 0;}
 .flex-control-thumbs img {width: 100%; display: block; opacity: .7; cursor: pointer;}
 .flex-control-thumbs img:hover {opacity: 1;}
 .flex-control-thumbs .flex-active {opacity: 1; cursor: default;}
+
+/* Separation of Image and Tumbnail Nav */
+.flexslider ol {
+	width: 100%;
+	float: right;
+	display:none;
+}
+
+.flexslider .slides{
+	width: 100%;
+	float: left;
+}
+
+.flex-control-thumbs li {
+	width: 100%;
+}
+
+
+@media only screen and (min-width: 30em) {
+	.flexslider ol {
+		width: 100%;
+		float: none;
+		display:block;
+	}
+	
+	.flexslider .slides{
+		width: 100%;
+		float: none;
+	}
+	
+	.flex-control-thumbs li {
+		width: 25%;
+	}
+}
+
+@media only screen and (min-width: 50em) {
+	.flexslider ol {
+		width: 50%;
+		float: right;
+	}
+	
+	.flexslider .slides{
+		width: 50%;
+		float: left;
+	}
+	
+	.flex-control-thumbs li {
+		width: 25%;
+	}
+}
+
+@media only screen and (min-width: 70em) {
+	.flexslider ol {
+		width: 50%;
+		float: right;
+	}
+	
+	.flexslider .slides{
+		width: 50%;
+		float: left;
+	}
+}
+
+@media only screen and (min-width: 100em) {
+	.flexslider ol {
+		width:75%;
+		float: left;
+	}
+	
+	.flexslider .slides{
+		width: 0%;
+		float: left;
+		display: none;
+	}
+	
+	.flexslider .accordion {
+		width: 100%;
+	}
+	
+	.flex-direction-nav {
+		display:none;
+	}
+	
+	.flex-control-thumbs img {
+		opacity: 1;
+		cursor: default;
+	}
+	
+	.flex-control-thumbs li {
+		width: 25%;
+	}
+}
 
 @media screen and (max-width: 860px) {
   .flex-direction-nav .flex-prev { opacity: 1; left: 10px;}
