Previous & Next buttons refined.
+ No more weird movement when opening About Project
+ Hover states added
+ Responsive to Small to XXL

--- a/_includes/css/ancestor.css
+++ b/_includes/css/ancestor.css
@@ -35,6 +35,11 @@ object {
 .clearfix {
 	clear: left;
 }
+
+#Layer_1 svg:hover {
+	fill: red;
+}
+
 /* Nope that didn't work.
 .about {
 	position:fixed !important;
