--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@ $(window).load(function() {
 	$('.flexslider').flexslider({
 		animation: "fade",
 		controlNav: "thumbnails",
-		pauseOnHover: false
+		pauseOnHover: true
 	});
 });
 </script>
