Prepping for Background Inclusion.
+ Added two more colours.

--- a/_includes/css/typography.css
+++ b/_includes/css/typography.css
@@ -34,6 +34,15 @@ OFF-WHITE
 	#F5F5F5
 	rgb(245,245,245)
 	
+COASTAL NAVY BLUE
+	#213A4F
+	rgb(33,58,79)
+	
+EMBER ORANGE
+	#E07000
+	rbg(224,112,0)
+	
+	
 */
 
 h1, h2, h3, h4, h5, h6, p, blockquote, ul, ol, dl, table {
