SVG Properly Set up
+ Mask crops properly
+ Naming Structure Amended
+ Hovering over house still illuminates window. :)

--- a/_includes/pieces.html
+++ b/_includes/pieces.html
@@ -69,6 +69,28 @@
 </div> <!-- end div for piece -->
 <!--
 
+<style type="text/css" media="screen">  
+	<![CDATA[  
+	#mountians,
+	#smallhouse
+	#light{  
+		transition: .5s;  
+		-webkit-transition: .5s;  
+		-moz-transition: .5s;  
+		-ms-transition: .5s;  
+		-o-transition: .5s;  
+	}  
+	#mountians:hover polygon {  
+	}  
+	
+	#smallhouse:hover #light {
+		fill: #FBAE17;
+	}
+	]]>  
+</style>
+
+
+
 		<div class="unit unit-s-4-8 unit-m-4-8 unit-l-2-8 unit-xl-1-8">
 			<img src="http://placehold.it/600x400/FFA500/778899" alt="">
 		</div>
