--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,7 +2,7 @@
 	<nav class="nav nav-bar-center">
 		<ul class="planet">
 			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
-				<a href="#work">
+				<a href="http://gabrielmitchell.ca/#work">
 					<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
 						Gabriel Mitchell Fox Logo
 					</object>	
@@ -10,7 +10,7 @@
 				</a>
 			</li>
 			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
-				<a href="#about">
+				<a href="http://gabrielmitchell.ca/#about">
 					<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
 						Gabriel Mitchell Fox Logo
 					</object>
@@ -18,7 +18,7 @@
 				</a>
 			</li>
 			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
-				<a href="#contact">
+				<a href="http://gabrielmitchell.ca/#contact">
 					<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
 						Gabriel Mitchell Fox Logo
 					</object>	
