--- a/_includes/css/ancestor.css
+++ b/_includes/css/ancestor.css
@@ -29,7 +29,7 @@ object {
 }
 
 .wrap {
-		overflow: auto;
+	overflow: auto;
 }
 
 .clearfix {
@@ -40,24 +40,17 @@ object {
 	fill: red;
 }
 
-/* Nope that didn't work.
-.about {
-	position:fixed !important;
+.full-height {
 	position:absolute;
 	top:0;
 	right:0;
 	bottom:0;
 	left:0;
-} */
-
-
-/*
-.welcome {
-	margin-top: 5%;
-	position: absolute;
-	width: 100%;
 }
-*/
+
+.errorbg {
+	background-color: #FA8072;
+}
 
 @media only screen and (min-width: 10em) {
 	.logo {
@@ -81,7 +74,7 @@ object {
 	}
 }
 
-@media only screen and (min-width: 30em) {
+@media only screen and (min-width: 50em) {
 	.logo {
 		width: 10%;
 		margin: 0 auto;
