--- a/_includes/css/typography.css
+++ b/_includes/css/typography.css
@@ -13,7 +13,7 @@
 	color: rbga(250,128,114,1);
 }
 
-.lace {
+.oldlace {
 	color: #FDF5E6;
 	color: rbga(253,245,230,1);
 }
@@ -53,7 +53,7 @@ h1, h2, h3, h4, h5, h6, p, blockquote, ul, ol, dl, table {
 	margin-bottom: 1.5rem;
 }
 
-h1, h2, h3, h4, h5, h6, .multiverse, .universe {
+h1, h2, h3, h4, h5, h6, .universe {
 	color: #FA8072;
 }
 	
@@ -129,10 +129,6 @@ small, .atom, caption {
 	font-weight: 100;
 }
 
-.salmon {
-	color: #FA8072;
-}
-
 /* ========================================== Basic Tag Definitions  ========================================== */
 
 p {
@@ -151,7 +147,6 @@ hr {
 
 :focus {
 	outline: 3px solid #FFA500;
-	background-color:  rgba(255,165,0,.2);
 	box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	-webkit-box-sizing:border-box;
@@ -179,6 +174,44 @@ a:hover,
 a:active {
 	outline:none;
 }
+
+.ohno-text {
+	text-transform: capitalize;
+}
+
+#ohno ul,
+#ohno li {
+	list-style-type: none;
+	margin: 0 0 .5rem .5rem;
+	position: relative;
+	color: #F5F5F5;
+}
+
+#ohno li:before {
+	content:'×';
+	position: absolute;
+	left: -15px;
+}
+
+#ohno li a,
+#ohno p {
+	color: #F5F5F5;
+}
+
+#ohno li a:hover,
+#error nav li a {
+	color: #F5F5F5;
+	font-weight: 400;
+}
+
+@media only screen and (max-width: 30em) {
+
+#ohno {
+	padding: 0 5%;
+}
+
+}
+
 /*
 a:focus {
 	outline: #CD5C5C 3px solid;
@@ -208,7 +241,7 @@ sub, sup {
 }
 
 strong {
-	font-weight: 500;
+	font-weight: 700;
 }
 
 .center-text {
@@ -255,7 +288,7 @@ hr {
 }
 
 .piece {
-	margin-bottom: 6rem;
+	margin-bottom: 3rem;
 }
 
 .banner {
