--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,27 +1,21 @@
 <div class="wrap buffer">
-	<nav class="nav nav-bar-center">
+	<nav class="nav nav-bar-center nav-top navccordion">
 		<ul class="planet">
-			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
+			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33  nav-icons">
 				<a href="http://gabrielmitchell.ca/#work">
-					<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
-						Gabriel Mitchell Fox Logo
-					</object>	
+				<img src="images/logo-gm.svg" alt="" class="menu-btn">
 					Work
 				</a>
 			</li>
-			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
+			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33 nav-icons">
 				<a href="http://gabrielmitchell.ca/#about">
-					<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
-						Gabriel Mitchell Fox Logo
-					</object>
+				<img src="images/logo-gm.svg" alt="" class="menu-btn">
 					About
 				</a>
 			</li>
-			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33">
+			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33 nav-icons">
 				<a href="http://gabrielmitchell.ca/#contact">
-					<object type="image/svg+xml" data="images/logo-gm.svg" class="menu-btn">
-						Gabriel Mitchell Fox Logo
-					</object>	
+				<img src="images/logo-gm.svg" alt="" class="menu-btn">
 					Contact
 				</a>
 			</li>
