--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,25 +14,27 @@
 <meta name="copyright" content="©Gabriel Mitchell">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script> -->
-<script src="js/jquery.flexslider.js"></script>
-<script type="text/javascript">
-$(window).load(function() {
-	$('.flexslider').flexslider({
-		animation: "fade",
-		controlNav: "thumbnails",
-		pauseOnHover: true,
-		slideshow: false,
-		animationLoop: false
-	});
-});
-</script>
 </head>
 <body>
 	
 	{{content}}
 	
-	<!-- jquery 2.1.1 & accordion for INFO TOGGLE -->
-	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
+	<!-- Nav & Other General JS -->
+	<script src="js/general.js"></script>
+	<script src="js/waypoints.min.js"></script>
+	<!-- Flexslider JS -->
+	<script src="js/jquery.flexslider.js"></script>
+	<script type="text/javascript">
+	$(window).load(function() {
+		$('.flexslider').flexslider({
+			animation: "fade",
+			controlNav: "thumbnails",
+			pauseOnHover: true,
+			slideshow: false,
+			animationLoop: false
+		});
+	});
+	</script>
 	<script src="js/accordion.js"></script>
 	
 </body>
