--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,5 @@
 <div class="wrap buffer">
-	<nav class="nav nav-bar-center nav-top navccordion">
+	<nav class="nav nav-bar-center navccordion">
 		<ul class="planet">
 			<li class="unit unit-s-1 unit-m-33 unit-l-33 unit-xl-33  nav-icons">
 				<a href="http://gabrielmitchell.ca/#work">
