--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -36,6 +36,7 @@ LIGHTSLATEGRAY
 .nav {
 	overflow:hidden;
 	width: 100%;
+	z-index: 9999;
 }
 
 .nav-bar-center {
@@ -63,7 +64,6 @@ LIGHTSLATEGRAY
 
 .nav li {
 	text-decoration: none;
-	background-color: #F5F5F5;
 	display: inline-block;
 	text-align: center;
 	color: #FDF5E6; 
@@ -73,6 +73,10 @@ LIGHTSLATEGRAY
 	-ms-transition: .35s;
 	-o-transition: .35s;
 	transition: .35s;
+}
+
+.nav-top li {
+	background-color: #F5F5F5;
 }
 
 .menu-btn {
