--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -37,6 +37,19 @@ LIGHTSLATEGRAY
 	overflow:hidden;
 	width: 100%;
 	z-index: 9999;
+	-webkit-transition: all .25s ease-out 0 ;
+	-moz-transition: all .25s ease-out 0;
+	-ms-transition: all .25s ease-out 0;
+	-o-transition: all .25s ease-out 0;
+	transition: all .25s ease-out 0;
+}
+
+.nav img {
+	-webkit-transition: all .25s ease-out 0 ;
+	-moz-transition: all .25s ease-out 0;
+	-ms-transition: all .25s ease-out 0;
+	-o-transition: all .25s ease-out 0;
+	transition: all .25s ease-out 0;
 }
 
 .nav-bar-center {
@@ -49,6 +62,8 @@ LIGHTSLATEGRAY
 	margin: 0;
 	padding: 0;
 }
+
+
 
 .contact {
 	align-content: center;
@@ -66,7 +81,7 @@ LIGHTSLATEGRAY
 	text-decoration: none;
 	display: inline-block;
 	text-align: center;
-	color: #FDF5E6; 
+	color: #FA8072; 
 	padding: 1.5rem 0;
 	-webkit-transition: .35s;
 	-moz-transition: .35s;
